k8s/study/ingress-web/deploy-demo.yaml
apiVersion: v1
kind: Service
metadata:
  name: myapp
  namespace: default
spec:
  selector:
    app: myapp
    release: canary
  ports:
  - name: http
    port: 80
    targetPort: 80
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: myadpp-deploy
  namespace: default
spec:
  replicas: 3
  selector: 
    matchLabels:
      app: myapp
      release: canary
  template:
    metadata: 
      labels: 
        app: myapp
        release: canary
    spec:
      containers:
      - name: myapp
        image: nginx:latest
        ports:
        - name: http
          containerPort: 80
