k8s/study/ingress-web/nginx.yaml
apiVersion: v1
kind: Service
metadata:
  name: ingress-app
  namespace: default
spec:
  selector:
    app: ingress-app
    release: canary
  ports:
  - name: http
    port: 80
    targetPort: 80
---
apiVersion: apps/v1beta1
kind: Deployment
metadata:
  name: ingress-app
spec:
  replicas: 3
  template:
    metadata:
      labels:
        app: ingress-app
        release: canary
    spec:
      containers:
      - name: nginx
        image: nginx:1.7.9
        ports:
        - containerPort: 80
