k8s/study/ingress-web/ingress-nginx.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: ingress-myapp
  namespace: default
  annotations:
    kubernetes.io/ingress.class: "nginx"
spec:
  rules:
  - host: myapp.g6p.cn
    http:
      paths:
      - path:
        backend:
          serviceName: ingress-app
          servicePort: 80
